# pastore

./: .dockerignore  README.md  bootstrap.py  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: api-ci.yaml  frontend-ci.yml  release-ci.yaml
app/: .dockerignore  Dockerfile  db.py  main.py  pyproject.toml
app/core/: config.py  logs.py  security.py
app/dependencies/: admin.py  database.py
app/migrations/: env.py
app/migrations/versions/: 8665852e940e_pasted_duration_is_nullable.py  c477e80d4a0c_branding_table.py  ef9f337aeec5_cleanup_pasted_and_expiry_duration_index.py
app/models/: management.py  pasted.py
app/routers/: auth.py  management.py  pasted.py
app/schemas/: jwt.py  management.py
app/scripts/: bootstrap.py
app/service/: adminService.py  exceptions.py  pastedService.py  test_pastedService.py
app/service/tests/: test_pastedService.py
app/utils/: manage.py  utils.py
migrations/: env.py
migrations/versions/: a2cab60129c2_initial_migration.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/apiClient/: client.ts
web/src/assets/: main.css
web/src/components/: PHeader.vue  PModal.vue  PRightSidebar.vue
web/src/components/icons/: PrivacyPolicyIcon.vue
web/src/composables/: api.ts  language-detect.ts  modal.ts  toast.ts
web/src/router/: index.ts
web/src/stores/: appStore.ts
web/src/types/: ApiTypes.ts
web/src/views/: AdminLayout.vue  AdminPastesView.vue  LoginView.vue  NotFound.vue  PasteView.vue  RightSidebarView.vue  UserLayout.vue
