[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "annotated-doc",
    "annotated-types",
    "anyio",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "black",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "dnspython",
    "docstring-to-markdown",
    "email-validator",
    "fastapi",
    "fastapi-cdn-host",
    "fastapi-cli",
    "fastapi-cloud-cli",
    "fastar",
    "greenlet",
    "h11",
    "httpcore",
    "httptools",
    "httpx",
    "idna",
    "importlib-metadata",
    "iniconfig",
    "jedi",
    "jinja2",
    "librt",
    "mako",
    "markdown-it-py",
    "markupsafe",
    "mdurl",
    "mypy",
    "mypy-extensions",
    "packaging",
    "parso",
    "pathspec",
    "platformdirs",
    "pluggy",
    "psycopg2",
    "pwdlib",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydantic-extra-types",
    "pydantic-settings",
    "pygments",
    "pyjwt",
    "pylsp-mypy",
    "pytest",
    "python-dotenv",
    "python-json-logger>=4.1.0",
    "python-lsp-jsonrpc",
    "python-lsp-server",
    "python-multipart",
    "pytokens",
    "pyyaml",
    "requests",
    "rfc3339",
    "rich",
    "rich-toolkit",
    "rignore",
    "sentry-sdk",
    "shellingham",
    "sqlalchemy",
    "sqlmodel",
    "starlette",
    "typer",
    "typing-extensions",
    "typing-inspection",
    "ujson",
    "urllib3",
    "uvicorn",
    "uvloop",
    "watchfiles",
    "websockets",
    "zipp",
]
[tool.pyright]

reportUnusedCallResult = false
